# Doodle

./: CMakeLists.txt  README.md  main.cpp
include/background/: background.cpp  background.h
include/doodle/: doodle.cpp  doodle.h
include/gameplay/: gameplay.cpp  gameplay.h
include/gameplayNOMUSIC/: gameplay.cpp  gameplay.h
include/logic/: gamelogic.cpp
include/music/: musicplayer.cpp  musicplayer.h
include/platform/: platform.cpp  platform.h
include/score/: jumpscore.cpp  jumpscore.h
include/volume/: volume.cpp  volume.h
